# PGTraceCleaner

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app.manifest  build.py  main.py
include/: utils.h
src/: console.cpp  file.cpp  main.cpp  process.cpp  registry.cpp
