cmake_minimum_required(VERSION 3.16)
project(PGTraceCleaner)
set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Release")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded")
set(CMAKE_CXX_FLAGS_RELEASE "/O1 /Os /Oy /Gw /GS- /GA /GL")
set(CMAKE_C_FLAGS_RELEASE "/O1 /Os /Oy /Gw /GS- /GA /GL")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MT")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MT")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/LTCG /OPT:REF /OPT:ICF /INCREMENTAL:NO /SUBSYSTEM:CONSOLE")
add_executable(PGTraceCleaner src/main.cpp src/process.cpp src/registry.cpp src/file.cpp src/console.cpp )
target_include_directories(PGTraceCleaner PRIVATE include)
target_compile_options(PGTraceCleaner PRIVATE /MT /W3 /EHsc /permissive- )
target_link_options(PGTraceCleaner PRIVATE /MANIFEST:EMBED /MANIFESTUAC:level='requireAdministrator' /DYNAMICBASE /NXCOMPAT )